Fix comment message alignment. Tighten buttons logic

--- a/src/system/ui/pages/comment/style.scss
+++ b/src/system/ui/pages/comment/style.scss
@@ -1,6 +1,15 @@
 .fl-asst {
 	.fl-asst-comment-details {
 
+		.fl-asst-content-area {
+			padding: var(--fluid-lg-space);
+			font-size: 16px;
+			font-weight: normal;
+			line-height: 1.3;
+			background: var(--fluid-box-background);
+			border-radius: var(--fluid-radius);
+		}
+
 		.fl-asst-comment-text {
 			padding: 15px;
 		}
